# ansible-mercator

./: README.md  ansible-mercator.sh  pyproject.toml
ansible_mercator/: __init__.py  __main__.py  cli.py
examples/: README.md
examples/inventory/: inventory.yml
examples/inventory/group_vars/: cluster_1.yml  eu_central_1.yml
examples/inventory/host_vars/: server_02.yml  server_03.yml
examples/inventory_refined/: cartography.yml  inventory.yml
examples/inventory_refined/group_vars/: equinix_1.yml  rack_1.yml  rack_2.yml
